--- a/front/scss/components/_searchbar.scss
+++ b/front/scss/components/_searchbar.scss
@@ -1,7 +1,7 @@
 @use '../themes' as *;
 
 .search-container {
-  position: fixed;
+  position: sticky;
   top: 0;
   z-index: 1000;
 
