--- a/front/scss/pages/_stream.scss
+++ b/front/scss/pages/_stream.scss
@@ -2,7 +2,6 @@
 
 .stream-header,
 .writer-header {
-  margin-top: 5rem;
   animation: fade-appearance .5s ease-out;
 }
 
